--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "pawedloader",
   "version": "1.0.0",
-  "description": "I don't really know, dragocuven wanted a userscript thing so I made a repo.",
+  "description": "PawedLoader userscript.",
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"Error: no build specified\" && exit 1"
+    "build": "node ./build.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Ashimee",
+  "license": "LGPL-3.0 and MIT",
+  "dependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-loader": "^9.1.3",
+    "rimraf": "^5.0.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  }
 }
