--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Ashimee",
   "license": "LGPL-3.0 and MIT",
   "dependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
-    "babel-loader": "^9.1.3",
     "rimraf": "^5.0.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-loader": "^9.1.3"
   }
 }
