--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ashimee",
   "license": "LGPL-3.0 and MIT",
   "dependencies": {
+    "@turbowarp/types": "github:TurboWarp/types-tw#tw",
     "rimraf": "^5.0.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
