--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "html-loader": "^5.0.0",
+    "style-loader": "^4.0.0"
   }
 }
